--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "ngx-pagination": "^3.0.0",
     "ngx-pipes": "^1.7.0",
     "rxjs": "^5.5.11",
+    "script-loader": "^0.7.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.1",
+    "@angular/cli": "^6.0.8",
     "@angular/compiler-cli": "^5.2.11",
     "@types/d3": "^3.5.36",
     "@types/jasmine": "2.5.38",
@@ -58,6 +59,7 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "^2.4.2"
+    "typescript": "^2.4.2",
+    "@angular-devkit/build-angular": "~0.6.8"
   }
 }
