--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-server": "^5.2.11",
     "@angular/router": "^5.2.11",
     "@swimlane/ngx-datatable": "^10.0.5",
+    "angular-tree-component": "^7.2.0",
     "angular2-notifications": "^0.5.6",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
@@ -36,6 +37,7 @@
     "lodash": "^4.15.0",
     "ngx-pagination": "^3.1.1",
     "ngx-pipes": "^1.7.0",
+    "phylotree": "^0.1.6",
     "rxjs": "^5.5.11",
     "script-loader": "^0.7.2",
     "zone.js": "^0.8.14"
