--- a/package.json
+++ b/package.json
@@ -13,24 +13,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.11",
-    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/cdk": "^5.2.5",
     "@angular/common": "^5.2.11",
     "@angular/compiler": "^5.2.11",
     "@angular/core": "^5.2.11",
     "@angular/flex-layout": "^2.0.0-beta.10-4905443",
     "@angular/forms": "^5.2.11",
     "@angular/http": "^5.2.11",
-    "@angular/material": "^2.0.0-beta.8",
+    "@angular/material": "^5.2.5",
     "@angular/platform-browser": "^5.2.11",
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/platform-server": "^5.2.11",
     "@angular/router": "^5.2.11",
     "@swimlane/ngx-datatable": "^10.0.5",
+    "@types/underscore": "^1.8.8",
     "angular-tree-component": "^7.2.0",
     "angular2-notifications": "^0.5.6",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "d3": "^3.0.0",
+    "d3-hierarchy": "^1.1.6",
     "escher-vis": "^1.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
@@ -40,6 +42,7 @@
     "phylotree": "^0.1.6",
     "rxjs": "^5.5.11",
     "script-loader": "^0.7.2",
+    "underscore": "^1.9.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
