--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-server": "^5.2.11",
     "@angular/router": "^5.2.11",
     "@swimlane/ngx-datatable": "^10.0.5",
+    "@types/jquery": "^3.3.4",
     "@types/underscore": "^1.8.8",
     "angular-tree-component": "^7.2.0",
     "angular2-notifications": "^0.5.6",
