--- a/angular.json
+++ b/angular.json
@@ -96,7 +96,8 @@
               "node_modules/@swimlane/ngx-datatable/release/assets/icons.css",
               "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "node_modules/font-awesome/css/font-awesome.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/angular-tree-component/dist/angular-tree-component.css"
             ],
             "assets": [
               "src/assets",
